# LLM-Based-PR-Review-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  review.yml
src/pr_review_agent/: cli.py
src/pr_review_agent/agents/: __init__.py  code_reviewer.py  doc_summarizer.py  pr_fetcher.py  test_coverage.py
src/pr_review_agent/config/: __init__.py  settings.py
src/pr_review_agent/graph/: __init__.py  pipeline.py
src/pr_review_agent/models/: __init__.py  state.py
src/pr_review_agent/server/: app.py
src/pr_review_agent/services/: __init__.py  github_service.py  llm_service.py  review_poster.py
src/pr_review_agent/tools/: __init__.py  static_analyzer.py
src/pr_review_agent/utils/: __init__.py  logging.py
tests/unit/: conftest.py  test_config.py  test_github_service.py  test_llm_service.py  test_review_formatter.py  test_state_models.py  test_static_analyzer.py
